--- a/cheat.html
+++ b/cheat.html
@@ -189,48 +189,97 @@
     
     <div class="faq-item">
         <button onclick="toggleFAQ(this)">
-            <span class="icon">+</span> How do I install Arc Search?
+            <span class="icon">+</span> gpt
         </button>
         <div class="faq-answer">
-            To install Arc Search, visit the app store on your device, search for "Arc Search" and click on install.
+            Download > Search "@gpt"
         </div>
     </div>
 
     <div class="faq-item">
         <button onclick="toggleFAQ(this)">
-            <span class="icon">+</span> What devices are supported?
+            <span class="icon">+</span> tower
         </button>
         <div class="faq-answer">
-            Arc Search is supported on Android and iOS devices, along with desktop operating systems such as Windows and macOS.
+            Download > Search "@tower"
         </div>
     </div>
 
     <div class="faq-item">
         <button onclick="toggleFAQ(this)">
-            <span class="icon">+</span> How do I set Arc Search as my default mobile browser?
+            <span class="icon">+</span> gemini
         </button>
         <div class="faq-answer">
-            Go to your phone settings, navigate to the browser settings, and select Arc Search as the default browser.
+            Download > Search "@gemini"
         </div>
     </div>
 
     <div class="faq-item">
         <button onclick="toggleFAQ(this)">
-            <span class="icon">+</span> How do I sync across mobile and desktop?
+            <span class="icon">+</span> era
         </button>
         <div class="faq-answer">
-            Sign in with the same account on both devices, and your data will sync automatically across mobile and desktop.
+            Download > Search "@era" 
         </div>
     </div>
 
     <div class="faq-item">
         <button onclick="toggleFAQ(this)">
-            <span class="icon">+</span> How do I share feedback?
+            <span class="icon">+</span> road
         </button>
         <div class="faq-answer">
-            You can share feedback via the feedback section in the app settings or by contacting the support team directly.
+            Download > Search "@road"
         </div>
     </div>
+    <div class="faq-item">
+        <button onclick="toggleFAQ(this)">
+            <span class="icon">+</span> nova
+        </button>
+        <div class="faq-answer">
+            Download > Search "@nova"
+        </div>
+    </div>
+    <div class="faq-item">
+        <button onclick="toggleFAQ(this)">
+            <span class="icon">+</span> mira
+        </button>
+        <div class="faq-answer">
+            Download > Search "@mira"
+        </div>
+    </div>
+    <div class="faq-item">
+        <button onclick="toggleFAQ(this)">
+            <span class="icon">+</span> dict
+        </button>
+        <div class="faq-answer">
+            Download > Search "@dict"
+        </div>
+    </div>
+    <div class="faq-item">
+        <button onclick="toggleFAQ(this)">
+            <span class="icon">+</span> policy
+        </button>
+        <div class="faq-answer">
+            Download > Search "@policy"
+        </div>
+    </div>
+    <div class="faq-item">
+        <button onclick="toggleFAQ(this)">
+            <span class="icon">+</span> 🤫 (secret)
+        </button>
+        <div class="faq-answer">
+            Find it on your own (only for 18+)
+        </div>
+    </div>
+    <div class="faq-item">
+        <button onclick="toggleFAQ(this)">
+            <span class="icon">+</span> insta
+        </button>
+        <div class="faq-answer">
+            Download > Search "@insta" 
+        </div>
+    </div>
+    
 </div>
 
 <script>
