--- a/about.html
+++ b/about.html
@@ -14,19 +14,19 @@
 
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #000; /* Black background */
-            color: #fff; /* White text */
+            background-color: #fff; /* Black background */
+            color: #000; /* White text */
         }
 
         .appbar {
             display: flex;
             align-items: center;
             padding: 20px;
-            background: rgba(0, 0, 0, 0.9); /* Dark background for app bar */
+            background: #FFFFFF;/* Dark background for app bar */
             position: sticky;
             top: 0;
             z-index: 1000;
-            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
+            
         }
 
         .logo {
@@ -37,7 +37,7 @@
 
         h1 {
             font-size: 24px;
-            color: #fff; /* White text */
+            color: #000; /* White text */
         }
 
         main {
@@ -54,7 +54,7 @@
         h2 {
             margin: 20px 0;
             font-size: 22px;
-            color: #fff; /* White text for h2 */
+            color: #000; /* White text for h2 */
             padding-left: 10px; /* Add padding to h2 */
         }
 
@@ -64,7 +64,7 @@
             font-size: 16px;
             max-width: 800px; /* Limit max width for text */
             padding-left: 10px; /* Add padding to paragraph */
-            color: #ddd; /* Slightly lighter text color for paragraphs */
+            color: #333333; /* Slightly lighter text color for paragraphs */
         }
     </style>
 </head>
