--- a/about.html
+++ b/about.html
@@ -78,10 +78,17 @@
         <img src="home.png" alt="Main Image" class="main-image">
         <h2>Message by Developer</h2>
         <p>
-            Welcome to the Era Search platform. This application is designed to provide users with seamless access 
-            to a variety of information and resources. Our goal is to enhance your search experience, making it 
-            easier than ever to find what you're looking for. We believe in providing the best tools to help you 
-            navigate through the digital landscape efficiently.
+            Hello there! I’m Ansh Sharma, the 16-year-old founder of Era Search Inc., hailing from the beautiful city of Jammu, India. Yes, you read that right—I’m just a teenager with big dreams and a knack for technology! I want to take a moment to sincerely apologize for the current lack of features in our app. I promise, we’re hard at work in development, and it will soon be bursting at the seams with exciting new functionalities!
+
+As I embark on this entrepreneurial journey, I often find myself inspired by innovative platforms like Arc Search. I’m determined to create something unique that’ll make you say, “Wow, why didn’t I think of that?” But here’s the twist: while I’m trying to revolutionize the search experience, I’m also knee-deep in preparing for the JEE (Joint Entrance Examination). Balancing app development and exam prep feels like trying to juggle flaming torches while riding a unicycle—definitely not a circus act I signed up for!
+
+I want to introduce my father, Dewarka Nath, who is my biggest supporter (and the one who reminds me to eat my vegetables). Your patience and understanding during this busy time mean the world to me. So, thank you for sticking with us! I can't wait to share all the amazing updates we have in store, and I promise they’ll be worth the wait!
+
+Stay tuned for some fun features, and remember: even the best apps take a little time to cook up!
+
+Best,
+Ansh Sharma
+Owner, Era Search Inc.
         </p>
         <img src="sign.png" alt="Another Image" class="main-image">
     </main>
