--- a/products.html
+++ b/products.html
@@ -13,6 +13,20 @@
     </header>
     <main>
         <div class="list-view">
+            <a href="resume.html" class="list-item gradient-item gradient-burnt-sandy">
+                <img src="resume.jpg" alt="Item Image">
+                <div class="text-container">
+                    <h2 class="title">Resume Builder</h2>
+                    <p class="subtitle">Hard work in smart way - Advanced Resume Maker</p>
+                </div>
+            </a>
+            <a href="https://readme4git.vercel.app/" class="list-item gradient-item gradient-mint-white">
+                <img src="readme4git.jpg" alt="Item Image">
+                <div class="text-container">
+                    <h2 class="title">Professional Readme Maker</h2>
+                    <p class="subtitle">Create Readme free and faster for github, or simply say a markdown editor</p>
+                </div>
+            </a>
             
             <a href="towergame.html" class="list-item gradient-item gradient-sunset">
                 <img src="10.jpg" alt="Item Image">
