--- a/products.html
+++ b/products.html
@@ -13,7 +13,14 @@
     </header>
     <main>
         <div class="list-view">
-            <a href="resume.html" class="list-item gradient-item gradient-burnt-sandy">
+            <a href="https://era-web-bice.vercel.app/" class="list-item gradient-item gradient-indigo-lavender">
+                <img src="erasearch.jpg" alt="Item Image">
+                <div class="text-container">
+                    <h2 class="title">Era Search</h2>
+                    <p class="subtitle">A new way of surfing the internet 😉</p>
+                </div>
+            </a>
+            <a href="https://eraresume.vercel.app/" class="list-item gradient-item gradient-burnt-sandy">
                 <img src="resume.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Resume Builder</h2>
