--- a/products.html
+++ b/products.html
@@ -14,21 +14,21 @@
     <main>
         <div class="list-view">
             <a href="https://era-web-bice.vercel.app/" class="list-item gradient-item gradient-indigo-lavender">
-                <img src="erasearch.jpg" alt="Item Image">
+                <img src="erasearch.jpeg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Era Search</h2>
                     <p class="subtitle">A new way of surfing the internet 😉</p>
                 </div>
             </a>
             <a href="https://eraresume.vercel.app/" class="list-item gradient-item gradient-burnt-sandy">
-                <img src="resume.jpg" alt="Item Image">
+                <img src="resume.jpeg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Resume Builder</h2>
                     <p class="subtitle">Hard work in smart way - Advanced Resume Maker</p>
                 </div>
             </a>
             <a href="https://readme4git.vercel.app/" class="list-item gradient-item gradient-mint-white">
-                <img src="readme4git.jpg" alt="Item Image">
+                <img src="readme4git.jpeg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Professional Readme Maker</h2>
                     <p class="subtitle">Create Readme free and faster for github, or simply say a markdown editor</p>
