--- a/products.html
+++ b/products.html
@@ -106,14 +106,14 @@
                 </div>
             </a>
             <a href="thumbnail.html" class="list-item gradient-item gradient-magenta-violet">
-                <img src="11.jpg" alt="Item Image">
+                <img src="thumbnaild.jpeg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">YT Thumbnail Downloader</h2>
                     <p class="subtitle">Easily Download YouTube thumbnails ☺️</p>
                 </div>
             </a>
             <a href="policy.html" class="list-item gradient-item gradient-cherry-lemon">
-                <img src="privacy.jpg" alt="Item Image">
+                <img src="policy.jpeg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Privacy Policy</h2>
                     <p class="subtitle">Privacy Policy - ERA SEARCH 🔎</p>
