--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <a href="https://example.com/about" class="overlay-btn">About Us</a>
         </div>
     </div>
+    <my-widget project-id="5"></my-widget>
+<script src="https://revoob-widget.vercel.app/widget.umd.js"></script>
 
     
 
