--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <a href="https://example.com/about" class="overlay-btn">About Us</a>
         </div>
     </div>
+    <srevoob project-id="70545074"></srevoob>
     <my-widget project-id="5"></my-widget>
 <script src="https://revoob-widget.vercel.app/widget.umd.js"></script>
 
